# magnet2torrent

./: .env.example  METADATA.json  README.md  USAGE.md  pyproject.toml  requirements.txt
magnet2torrent/: cache_sites.json  cli.py  config.py  core.py
tests/: test_core.py
